石塚　コミット

--- a/Last-Subject/WebContent/css/style.css
+++ b/Last-Subject/WebContent/css/style.css
@@ -9,21 +9,67 @@ body {
     max-width: 900px;
     margin: 0 auto;
 }
-h1 {
-	text-align: left;
-	font-size: 130%;
+
+.demo {
+  width: 500px;
+  margin: 0 auto;
+  padding: 10px 0;
+  font-family: sans-serif;
+  font-size: 20px;
+  color:#3cb3e4;
 }
-h2{
-	text-align: left;
-	font-size: 100%;
+.heading {
+  margin: 10px 0
 }
-p {
-	text-align: left;
+.demo9 .heading {
+  border-top: 3px solid #3cb3e4;
+  border-bottom: 3px solid #3cb3e4;
+  padding: 5px 20px;
+  position: relative;
+  width: 300px;
+  text-align: center;
+  margin: 30px auto;
+  color: #3cb3e4;
+  font-weight: bold;
 }
-table {
-	border-collapse: collapse;
+.demo9 .heading:before {
+  content: "";
+  border-left: 3px solid #3cb3e4;
+  border-right: 3px solid #3cb3e4;
+  display: block;
+  position: absolute;
+  width: calc(100% - 20px);
+  height: 58px;
+  top: -8px;
+  left: 8px;
 }
-td {
-	border: solid 1px;
-	padding: 0.5em;
-}
+
+#form{
+    width: 400px;
+    margin: 30px auto;
+    padding: 20px;
+    border: 1px solid #555;
+    }
+
+form p{
+    font-size: 14px;
+    }
+
+.form-title{
+    text-align: center;
+    }
+
+.mail,.pass{
+    margin-bottom: 20px;
+    }
+
+input[type="email"],
+input[type="password"] {
+    width: 300px;
+    padding: 4px;
+    font-size: 14px;
+    }
+    
+.submit{
+    text-align: right;
+    }
