--- a/Last-Subject/WebContent/css/style.css
+++ b/Last-Subject/WebContent/css/style.css
@@ -74,7 +74,7 @@ input[type="password"] {
     text-align: right;
     }
     
-#edit{
+#new{
     width: 800px;
     margin: 30px auto;
     padding: 20px;
