--- a/Last-Subject/WebContent/css/style.css
+++ b/Last-Subject/WebContent/css/style.css
@@ -1,13 +1,19 @@
 @CHARSET "UTF-8";
 body {
+	background: linear-gradient(#333, #000);
 	margin: 40px 10px;
 	padding: 0;
 	font-family: "Lucida Grande",Helvetica,Arial,Verdana,sans-serif;
 	font-size: 14px;
+	color: #fffeff;
 }
 #calendar {
     max-width: 900px;
     margin: 0 auto;
+    color: #3db2e4;
+}
+.fc-sun {
+    color: #FF0000;
 }
 
 .demo {
@@ -74,6 +80,59 @@ input[type="password"] {
     text-align: right;
     }
     
+/* font */
+#form p{
+  color: #077685;
+  font-weight: bold;
+  }
+
+#form .form-title{
+  font-family: Arial;
+  font-size: 30px;
+  color: #4eb4c2;
+  }
+
+/* skin */
+#form{
+  -webkit-border-radius: 6px;
+  -moz-border-radius: 6px;
+  border-radius: 6px;
+  -webkit-box-shadow: 0px 1px 10px #488a9e;
+  -moz-box-shadow: 0px 1px 10px #488a9e;
+  box-shadow: 0px 1px 10px #488a9e;
+  border: solid #4eb4c2 1px;
+  background: #fafafa;
+  }
+
+#form .form-title{
+  padding-bottom: 6px;
+  border-bottom: 2px solid #4eb4c2;
+  margin-bottom: 20px;
+  }
+
+.submit input{
+  font-family: Arial;
+  color: #ffffff;
+  font-size: 16px;
+  padding-top: 10px;
+  padding-right: 20px;
+  padding-bottom: 10px;
+  padding-left: 20px;
+  text-decoration: none;
+  -webkit-border-radius: 10px;
+  -moz-border-radius: 10px;
+  border-radius: 10px;
+  -webkit-box-shadow: 0px 8px 6px #e3e3e3;
+  -moz-box-shadow: 0px 8px 6px #e3e3e3;
+  box-shadow: 0px 8px 6px #e3e3e3;
+  border: solid #f5fdff 4px;
+  background: -webkit-gradient(linear, 0 0, 0 100%, from(#61c7e0), to(#418da8));
+  background: -moz-linear-gradient(top, #61c7e0, #418da8);
+  }
+.submit input:hover{
+  background: #37a4bf;
+ }
+    
 #new{
     width: 800px;
     margin: 30px auto;
@@ -94,9 +153,15 @@ input[type="text"]{
 .login-user {
 	margin-left: 5cm;
 	font-size: 18px;
-	color: #800080;
+	color: #3db2e4;
 }
 .username {
 	margin-left: 5cm;
 	font-size: 18px;
 }
+a { text-decoration: none;}
+a:hover { text-decoration: none;}
+a:link { color: #3db2e4; }　/*リンクの色*/
+a:visited { color: #3db2e4; }　/*訪問済みリンクの色*/
+a:hover { color: #3db2e4; }　/*マウスオン時のリンクの色*/
+a:active { color: #3db2e4; }　/*クリックしている時のリンクの色*/
