--- a/Last-Subject/WebContent/css/style.css
+++ b/Last-Subject/WebContent/css/style.css
@@ -159,9 +159,19 @@ input[type="text"]{
 	margin-left: 5cm;
 	font-size: 18px;
 }
-a { text-decoration: none;}
-a:hover { text-decoration: none;}
-a:link { color: #3db2e4; }　/*リンクの色*/
-a:visited { color: #3db2e4; }　/*訪問済みリンクの色*/
-a:hover { color: #3db2e4; }　/*マウスオン時のリンクの色*/
-a:active { color: #3db2e4; }　/*クリックしている時のリンクの色*/
+
+.square_btn{
+    display: inline-block;
+    padding: 0.5em 1em;
+    text-decoration: none;
+    background: #668ad8;/*ボタン色*/
+    color: #FFF;
+    border-bottom: solid 4px #627295;
+    border-radius: 3px;
+}
+.square_btn:active {/*ボタンを押したとき*/
+    -ms-transform: translateY(4px);
+    -webkit-transform: translateY(4px);
+    transform: translateY(4px);/*下に動く*/
+    border-bottom: none;/*線を消す*/
+}
