--- a/Last-Subject/WebContent/css/style.css
+++ b/Last-Subject/WebContent/css/style.css
@@ -160,7 +160,9 @@ input[type="text"]{
 	font-size: 18px;
 }
 
-.square_btn{
+a { text-decoration: none; }
+
+.logout_btn{
     display: inline-block;
     padding: 0.5em 1em;
     text-decoration: none;
@@ -168,10 +170,30 @@ input[type="text"]{
     color: #FFF;
     border-bottom: solid 4px #627295;
     border-radius: 3px;
+    margin-left: 5cm;
 }
-.square_btn:active {/*ボタンを押したとき*/
+.logout_btn:active {/*ボタンを押したとき*/
     -ms-transform: translateY(4px);
     -webkit-transform: translateY(4px);
     transform: translateY(4px);/*下に動く*/
     border-bottom: none;/*線を消す*/
+}
+
+.square_btn{
+    position: relative;
+    display: inline-block;
+    font-weight: bold;
+    text-decoration: none;
+    color: #FFF;
+    text-shadow: 0 0 5px rgba(255, 255, 255, 0.73);
+    padding: 0.3em 0.5em;
+    background: #00bcd4;
+    border-top: solid 3px #00a3d4;
+    border-bottom: solid 3px #00a3d4;
+    transition: .4s;
+    margin-left: 28.5cm;
+}
+
+.square_btn:hover {
+    text-shadow: -6px 0px 15px rgba(255, 255, 240, 0.83), 6px 0px 15px rgba(255, 255, 240, 0.83);
 }
